--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.2",
     "@mui/material": "^5.13.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2"
   },
